[package]
name = "raptr"
version = "0.1.0"
authors = ["CodeF0x <contact@codef0x.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde_derive = "1.0.117"
serde = "1.0.117"
comrak = "0.9.0"
clap = "2.33.3"