[package]
name = "raptr"
version = "0.1.0"
authors = ["CodeF0x <contact@codef0x.dev>"]
edition = "2018"
description = "A minimal, fast and easy to use static site generator and blogging-engine."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeF0x/raptr"
homepage = "https://github.com/CodeF0x/raptr/wiki"
keywords = ["blog", "website-generator", "markdown", "cli"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde_derive = "1.0.117"
serde = "1.0.117"
comrak = "0.9.0"
clap = "2.33.3"
tera = "1.6.1"
fs_extra = "1.2.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
warp = "0.3"